--- a/order_app/pubspec.yaml
+++ b/order_app/pubspec.yaml
@@ -36,14 +36,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_staggered_grid_view: ^0.4.0
   shared_preferences: ^2.0.15
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.2
   cloud_firestore: ^3.5.1
   firebase_storage: ^10.3.11
   image_picker: ^0.8.6
-  geolocator: ^9.0.2
-  geocoding: ^2.0.5
+  carousel_slider: ^4.1.1
+
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +86,7 @@ flutter:
   # example:
   assets:
     - images/
+    - slider/
 
 
   fonts:
