--- a/seller_app/pubspec.yaml
+++ b/seller_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
+  flutter_staggered_grid_view: ^0.4.0
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.2
   cloud_firestore: ^3.5.1
