--- a/order_app/pubspec.yaml
+++ b/order_app/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^0.8.6
   carousel_slider: ^4.1.1
   number_inc_dec: ^0.8.0
+  fluttertoast: ^8.0.9
+  provider: ^6.0.4
 
 
 dev_dependencies:
