--- a/order_app/pubspec.yaml
+++ b/order_app/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   flutter_staggered_grid_view: ^0.4.0
   shared_preferences: ^2.0.15
   firebase_core: ^1.24.0
@@ -45,9 +45,12 @@ dependencies:
   image_picker: ^0.8.6
   carousel_slider: ^4.1.1
   number_inc_dec: ^0.8.0
-  fluttertoast: ^8.0.9
-  provider: ^6.0.4
-
+  fluttertoast: ^8.0.8
+  provider: ^6.0.1
+  url_launcher: ^6.1.6
+  maps_launcher: ^2.0.1
+  geocoding: ^2.0.5
+  geolocator: ^8.0.1
 
 dev_dependencies:
   flutter_test:
