--- a/driver_app/pubspec.yaml
+++ b/driver_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.6
   geolocator: ^9.0.2
   geocoding: ^2.0.5
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
@@ -84,6 +85,15 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    - family: Bebas
+      fonts:
+        - asset: assets/fonts/BebasNeue-Regular.ttf
+    - family: Lobster
+      fonts:
+        - asset: assets/fonts/Lobster-Regular.ttf
     - family: Signatra
       fonts:
         - asset: assets/fonts/Signatra.ttf
+    - family: Varela
+      fonts:
+        - asset: assets/fonts/VarelaRound-Regular.ttf
