--- a/driver_app/ios/Podfile
+++ b/driver_app/ios/Podfile
@@ -10,6 +10,10 @@ project 'Runner', {
   'Release' => :release,
 }
 
+
+
+
+
 def flutter_root
   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
   unless File.exist?(generated_xcode_build_settings_path)
@@ -27,6 +31,8 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 
 flutter_ios_podfile_setup
 
+pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '9.6.0'
+
 target 'Runner' do
   use_frameworks!
   use_modular_headers!
@@ -39,3 +45,4 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
   end
 end
+
